 * IntaRNA/IndexRange :
   + overlappingWindows() : provides a vector of overlapping windows for 
     window-based processing
 * IntaRNA/OutputHandlerInteractionlist :
   * add() : 
     + check for identity before insert to avoid duplications in list
 * tests/IndexRange :
   + check for overlappingWindows()
 + tests/OutputHandlerInteractionList :
   + order test
   + duplicated insert test
     
version 2.2.1

180627 Martin Raden / Milad Miladi :
 * adaption to VRNA v2.4.8

180328 Martin Raden :
 * IntaRNA/OutputHandlerCsv :
 * IntaRNA/OutputHandlerIntaRNA1 :
 * IntaRNA/OutputHandlerText :
     + data first written to local stream before pushed (via OMP critical) to
       final output stream. This should fix some multi-threading output issues.
 * IntaRNA/OutputHandlerText :
   + usage of reportedInteractions member
   * destructor() :
     + check if nothing was reported and provide according output
 * bin/CommandLineParsing :
   * "version" output extended with used VRNA and boost version
     
version 2.2.0

180807 Martin Raden :
 * Makefile.am :
   + set GCC_COLORS (if not already present) to enable gcc output coloring

180711 Martin Raden :
 * IntaRNA/Interaction :
   * operator < : 
     * bugfix: right base pair access was incorrect (thanks to Sebastian Holler)

180710 Martin Raden :
 * IntaRNA/Predictor* :
   * traceback() :
     * sanity check corrected (debug mode only) to handle single bp interaction

180705 Martin Raden :
 + IntaRNA/PredictionTrackerProfileSpotProb : computes a profile for each 
   sequence position about the probability that a position is covered by an
   interaction (but not necessarily base paired within) = spot probability
 * IntaRNA/Makefile :
   + PredictionTrackerProfileSpotProb
 * bin/CommandLineParsing :
   + PredictionTrackerProfileSpotProb
   * '--out' argument :
     + q|tSpotProb : generate spot probability profile for query|target
   * getCodeForOutPrefix() :
     + parsing of "q|tSpotProb"
 * README.md : 